2017-11-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed import of nested structures as pages, resolves #11

2017-10-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Improved handling of storage pid, resolves #30
	* Adapted all unit and functional tests to TYPO3 v8 and nimut/testing-framework
	* Cleaned up the Importer class, resolves #25
	* Switched to moment.js for date formatting in Log module, resolves #19

2017-10-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Improved transformation properties, resolves #4

2017-08-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to register custom process steps, resolves #23
	* Removed old upgrade wizard, resolves #13
	* Adapted import API to refactored step structure, resolves #22

2017-08-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected usage of "useColumnIndex" in configuration loading, resolves #24

2017-07-12 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Improved configuration loading and validation, resolves #18

2017-06-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Refactored Importer class, resolves #8
	* Added command controller, resolves #20

2017-03-31 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected name pattern for new records placeholders, resolves #10
	* Released version 3.0.6

2017-03-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected usage of old "additionalFields" property name, resolves #9

2017-03-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected logic of "useColumnIndex" validator, resolves #3
	* Corrected logic of column configuration validator for XML-type data, resolves #5
	* Released version 3.0.5

2017-03-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed wrong declaration of Data Module menu items, resolves #1
	* Released version 3.0.4

2016-11-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed display of saved search in Data Import module, resolves #78721