@@ -32,6 +32,7 @@ define(['jquery',
 	 * @param tableView
 	 */
 	ExternalImportDataModule.buildTableForSynchronizableList = function(tableView) {
+		var hasScheduler = tableView.data('hasScheduler');
 		var columns = [
 			// Icon
 			{
@@ -57,18 +58,25 @@ define(['jquery',
 			{
 				targets: 4,
 				orderable: false
-			},
-			// Scheduler task information
-			{
-				targets: 5,
-				orderable: true
-			},
-			// Scheduler action icons
-			{
-				targets: 6,
-				orderable: false
 			}
 		];
+		// Add columns for Scheduler information if loaded
+		if (hasScheduler) {
+			// Information
+			columns.push(
+					{
+						targets: 5,
+						orderable: true
+					}
+			);
+			// Action icons
+			columns.push(
+					{
+						targets: 6,
+						orderable: false
+					}
+			);
+		}
 		ExternalImportDataModule.table = tableView.DataTable({
 			dom: 't',
 			serverSide: false,
